# ssm

./: .gitignore  README.md  install.sh  pyproject.toml  structure.txt
config/: scanner.service  scanner.timer  scanner.yaml
src/: main.py
src/checks/: base.py  database.py  disk.py  fail2ban.py  logins.py  memory.py  nginx.py  restarts.py  service_details.py  services.py  ssh.py
src/config/: __init__.py
src/core/: executor.py  models.py  scanner.py
src/reporting/: console.py  json.py
src/utils/: logging.py
